--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,10 @@
         android:theme="@style/Theme.Madoh"
         tools:targetApi="31">
         <activity
-            android:name=".Income"
-            android:exported="false"
-            android:label="@string/title_activity_income"
-            android:theme="@style/Theme.Madoh" />
-        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:theme="@style/Theme.Madoh">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
